# SimCCD

./: .gitignore  B02.root  B02_tierB_1M_1643660_20251225_211426.root  B02ntuples.root  B02ntuples_tierB_1M_1643660_20251225_211426.root  CMakeLists.txt  CMakePresets.json  README.md  cad_run.root  currentEvent.rndm  currentRun.rndm  primitive_run.root  setenv.ps1
ROOTanalysis/: Edep_CONNIE_NSAMP400_KeV.root  Edep_CONNIE_NSAMP400_MeV.root  Edep_NSAMP324_KeV.root  Edep_allclusters_NSAMP324_KeV.root  Edep_allclusters_NSAMP324_MeV.root  README.md  Sim_ab_initio_NMUONS_100000_PLANES_1x1_RADIO_5_CCDSIZE_400x600_SIGMA_LV_1_.root  ValidateMuonGen.C  ccdhisto.root  check_ntuple_sanity.C  run_validate_muongen.C
analysis/: cluster_run_cad_vs_none_prod.py  compare_modes.py  make_paper_outputs.py  package_paper_outputs.py  regression_check.py  run_cad_vs_none_paired.py  validate_muon_tierB.py
artifacts/: README.md
configs/: cad_vs_none_prod.yaml
docs/: cad_vs_none.md  cad_vs_none_summary_cad_vs_none_prod_v1.md  cad_vs_none_summary_cad_vs_none_prod_v1_regen.md  cluster.md  cluster_run.md  cluster_run_cad_vs_none.md  muon_sampling.md  paper_figures.md  paper_v1_repro.md
main/: B02.cc  CMakeLists.txt  currentEvent.rndm  currentRun.rndm  init_vis.mac
main/assets/cad/: assembly.dae  front_lid.stl  new_assembly_cleaned.dae  new_assembly_cleaned_assimp.dae  tube.stl
main/include/: B02ActionInitialization.hh  B02DetectorConstruction.hh  B02EventAction.hh  B02PrimaryGeneratorAction.hh  B02RunAction.hh  B02SteppingAction.hh  MuonFluxModel.hh  SimCCDConfig.hh.in
main/macros/: geom_check.mac  run_tierB_cosmic_muons.mac  run_tierB_cosmic_muons_20cm.mac  run_tierB_paper_default_1M.mac  run_with_cad.mac  run_with_cad_quiet.mac  run_without_cad.mac
main/src/: B02ActionInitialization.cc  B02DetectorConstruction.cc  B02EventAction.cc  B02PrimaryGeneratorAction.cc  B02RunAction.cc  B02SteppingAction.cc  MuonFluxModel.cc
outputs/: README.md  synth_cad.root  synth_none.root
outputs/paper_v1_200k/: B02ntuples_paper_v1_200k.root
outputs/paper_v1_50k/: B02ntuples_paper_v1_50k.root
outputs/tierB_paper_default_1M_thick725/: B02ntuples_tierB_paper_default_1M_thick725.root  run_driver_1M.mac
outputs/tierB_paper_default_50k_thick725/: run_driver_50k.mac
paper/: outline.md
paper_assets/figures/cad/: run_config.json
paper_assets/figures/cad/tables/: cutflow.csv  pixel_metrics_quality.csv
paper_assets/figures/compare/: compare_manifest.txt
paper_assets/figures/none/: run_config.json
paper_assets/figures/none/tables/: cutflow.csv  units_and_conventions.txt
paper_assets/tables/: comparison_summary.csv  validation_summary cad.csv  validation_summary none.csv
paper_outputs/: README.md
pixelization/: Sim_ab_initio.ipynb  pixelize_helpers.py
run/: paper_v1_driver_200k.mac  paper_v1_driver_50k.mac  run_muongen_validation.mac  run_simccd_10k.mac  run_simccd_1M.mac  run_tierB_targeted_10k.mac  tierB_paper_default_10k.mac
run/logs/: B02ntuples_run1.root  B02ntuples_run2.root
scripts/: benchmark_geometry.py  cluster_smoke_test.sh  run_compare_1M_tessellated_vs_nogeom.py  run_parallel_batches.py  run_simccd_1M.ps1  run_simccd_1M.sh  validate_geometry.py
slurm/: run_geometry.sbatch  run_tierB_paper_default_1M.sbatch
